# mender-mcp

./: .gitignore  PD.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.ai/: fd-001-user-information-gathering.md  fd-002-multi-instance-support.md  pd.md
.github/workflows/: issue-metrics.yml  run-pr-metrics.yml
scripts/: pr_metrics.py
src/mcp_server_mender/: __init__.py  __main__.py  mender_api.py  pr_metrics.py  security.py  server.py
tests/: __init__.py  test_security.py  test_server.py
