[project]
name = "mcp-server-mender"
version = "0.1.0"
description = "A Model Context Protocol server for Mender IoT platform integration"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "AI Assistant" }]
keywords = ["mender", "iot", "mcp", "device-management"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
mcp-server-mender = "mcp_server_mender:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true